--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -140,8 +140,8 @@ cycleMiles <- with(subset(NHTS.trips, {
 walkSpeed <- median(walkMiles/walkHours, na.rm = TRUE)
 cycleSpeed <- median(cycleMiles/cycleHours, na.rm = TRUE)
 
-Dwalk <- data.frame(Hours = walkHours, Miles = walkMiles, mode = "walk")
-Dcycle <- data.frame(Hours = cycleHours, Miles = cycleMiles, mode = "cycle")
+Dwalk <- data.frame(Hours = walkHours, Miles = walkMiles, Speed = walkMiles/walkHours, mode = "walk")
+Dcycle <- data.frame(Hours = cycleHours, Miles = cycleMiles, Speed = cycleMiles/cycleHours, mode = "cycle")
 D <- rbind(Dwalk,Dcycle)
 
 Dspeed <- data.frame(speed = c(1,1), intercept = log10(c(walkSpeed,cycleSpeed)), mode = c("walk","cycle"))
@@ -149,6 +149,11 @@ Dspeed <- data.frame(speed = c(1,1), intercept = log10(c(walkSpeed,cycleSpeed)),
 g <- ggplot(D, aes(Hours, Miles, colour = mode)) + geom_point()
 g <- g + geom_abline(aes(slope = speed, intercept = intercept, colour = mode), Dspeed) + facet_grid(. ~ mode)
 g + scale_y_log10() + scale_x_log10() + theme_bw()
+
+
+g <- ggplot(D, aes(log10(Speed), ..density.., fill = mode)) + geom_histogram(bins = 25) + facet_grid(. ~ mode)
+g
+
 ```
 
 #### Subset and Merge
