Working on visulization of mean matrices
There's a bug here right now that needs to be fixed.

--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -433,7 +433,11 @@ ITHIM.national <- updateITHIM(ITHIM.national, "muct", 2.50)
 DALYs <- lapply(ITHIMList, sumDALY, ITHIM.baseline = ITHIM.national)
 ```
 
+### Visualization of trip time matrices
+
 ```{r eval = TRUE}
+
+ITHIMList <- c(ITHIMList, list(ITHIM.national))
 
 meanMatrix <- function(ITHIM, mode = "walk"){
    if(mode == "walk"){
